<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#333333"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/TelaInicial"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/Actual_Situation"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/imageViewMenu"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageViewMenu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_menu_24"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewSANivel"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Nivel_Rio"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textViewSANivelValue"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Nivel_site"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSANivel"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textViewSANivelStatus"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/StatusSite"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textViewSANivelDiferenca"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Diferenca"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSANivelStatus"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textViewSATemperatura"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Temperature"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSANivelValue"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textViewSATemperatureValue"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TemperatureValue"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSATemperatura" />

    <TextView
        android:id="@+id/textViewSAhora1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/SAhora"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSANivelDiferenca"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textViewSAPrevisao"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/StaticText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSATemperatureValue"
        tools:layout_editor_absoluteX="12dp" />

    <TextView
        android:id="@+id/textViewSASlider"
        android:layout_width="206dp"
        android:layout_height="30dp"
        android:layout_marginTop="148dp"
        android:background="@color/verde"
        android:gravity="center"
        android:text="@string/Slider"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSAPrevisao"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewSAChuva"
        android:layout_width="206dp"
        android:layout_height="30dp"
        android:layout_marginTop="148dp"
        android:background="@color/verde"
        android:gravity="center"
        android:text="@string/rain"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSAPrevisao"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewSASliderStatus"
        android:layout_width="206dp"
        android:layout_height="30dp"
        android:background="@color/verde"
        android:gravity="center"
        android:text="@string/SliderStatus"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSASlider" />

    <TextView
        android:id="@+id/textViewSAChuvaStatus"
        android:layout_width="206dp"
        android:layout_height="30dp"
        android:background="@color/verde"
        android:gravity="center"
        android:text="@string/rainStatus"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSAChuva" />


</androidx.constraintlayout.widget.ConstraintLayout>
