<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#333333"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/TelaInicial"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/Actual_Situation"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/imageViewMenu"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageViewMenu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_menu_24"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/Menuactualsituation"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/Actual_Situation"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/Menunivelrio"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/Nivel_Rio"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Menuactualsituation"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/Menudeslizamentochuva"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/Deslizamento_Chuva"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Menunivelrio"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/Menuprevisaotempo"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/Previsao_tempo"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Menudeslizamentochuva"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/Menuavisosalertas"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/Avisos_Alertas"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Menuprevisaotempo"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/Menumapaestacoes"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/Mapa_Estacoes"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Menuavisosalertas"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/Menumaisopcoes"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/Mais_Opcoes"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Menumapaestacoes"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>


